--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -60,15 +60,13 @@ header {
     padding: 96px 0;
 }
 
-.search > input {
-    border: 0px;
+.search > input, input:focus {
+    border: 0;
     border-radius: 4px;
     font-size: 24px;
     padding: 12px;
-}
+    box-shadow: inset 0 2px 0 var(--grey-11),
+                0 3px 6px var(--grey-1-trans),
+                0 10px 20px var(--grey-3-trans);
 
-.search > input:focus {
-    border: 2px solid var(--primary-8);
-    border-radius: 4px;
-    padding: 10px;
 }
