--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -60,7 +60,7 @@ header {
     padding: 96px 0;
 }
 
-.search > input, input:focus {
+.search input, input:focus {
     border: 0;
     border-radius: 4px;
     font-size: 24px;
@@ -69,4 +69,8 @@ header {
                 0 3px 6px var(--grey-1-trans),
                 0 10px 20px var(--grey-3-trans);
 
+}
+
+.suggestions {
+    background-color: var(--grey-10);
 }
