--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -42,6 +42,15 @@ h1, h2, h3, h4, h5, h6 {margin: 0; padding: 0;}
 
 h3 {font-size: 32px;}
 
+ul {
+    padding: 4px;
+    margin: 4px;
+}
+li {
+    padding: 4px 0;
+    list-style-type: none;
+}
+
 header {
     padding: 16px;
     color: var(--primary-6);
@@ -73,4 +82,9 @@ header {
 
 .suggestions {
     background-color: var(--grey-10);
+    margin-top: 12px;
+    border-radius: 4px;
+    box-shadow: inset 0 2px 0 var(--grey-11),
+                0 3px 6px var(--grey-1-trans),
+                0 10px 20px var(--grey-3-trans);
 }
