simple expandable-component

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -93,6 +93,8 @@ header {
 
 .expandable {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 
 }
