expandable component with height transition

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -99,7 +99,7 @@ header {
 
 }
 
-.expandable div {
+.expandable div:first-child {
     display: inline-flex;
     background-color: var(--grey-10);
     padding: 16px;
