--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -44,6 +44,13 @@ h3 {font-size: 32px;}
 
 svg {width: 12px;}
 
+table {
+    background-color: var(--grey-10);
+    border-radius: 4px;
+    padding: 8px;
+    margin: 32px 0;
+}
+
 ul {
     padding: 4px;
     margin: 4px;
