--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -69,13 +69,19 @@ li {
 
 header {
     padding: 16px;
-    color: var(--primary-6);
+    color: var(--grey-11);
+    text-shadow: 2px 2px var(--primary-1-trans);
     background-image: linear-gradient(var(--primary-1), rgba(100, 100, 100, 0));
 }
 
+.shadow {
+    box-shadow: inset 0 2px 0 var(--grey-11),
+                      0 3px 6px var(--grey-1-trans),
+                      0 10px 20px var(--grey-3-trans);
+}
+
 .background {
-    height: 100vh;
-    background: url('sample-background.jpg');
+    background: url('sample-background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -93,7 +99,6 @@ header {
     box-shadow: inset 0 2px 0 var(--grey-11),
                 0 3px 6px var(--grey-1-trans),
                 0 10px 20px var(--grey-3-trans);
-
 }
 
 .suggestions {
