--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -74,6 +74,13 @@ header {
     background-image: linear-gradient(var(--primary-1), rgba(100, 100, 100, 0));
 }
 
+footer {
+    padding: 16px;
+    text-shadow: 2px 2px var(--primary-1-trans);
+    color: var(--grey-11);
+    margin: 512px 0 0 0;
+}
+
 .shadow {
     box-shadow: inset 0 2px 0 var(--grey-11),
                       0 3px 6px var(--grey-1-trans),
