--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -22,7 +22,7 @@
   --grey-6: hsl(0, 0%, 62%);
   --grey-7: hsl(0, 0%, 69%);
   --grey-8: hsl(0, 0%, 81%);
-  --grey-9: hsl(0, 0%, 88%);
+  --grey-9: hsl(0, 0%, 91%);
   --grey-9-trans: hsla(0, 0%, 88%, .50);
   --grey-10: hsl(0, 0% , 97%);
   --grey-11: hsl(0, 0%, 100%);
@@ -57,15 +57,8 @@ table {
 }
 
 th, td {padding: 8px;}
-div.sort {
-    display: inline-flex;
-    flex-direction: column;
-    padding: 12px;
-}
-.sort svg {
-    width: 10px;
-    padding: 0;
-    margin: -8px;
+tr:nth-child(even) {
+    background-color: var(--grey-9);
 }
 
 ul {
